# LiarsoftTool

./: .gitignore  CMakeLists.txt  README.md  RScriptPacker.cpp  app.manifest  untitled.txt
include/: bigendian.h  cg_decompress.h  encoding.h  exe_patch.h  gscfile.h  gui.h  gui_win32.h  lim_decoder.h  lwg_decoder.h  transfile.h  wav_ogg.h  wcg_decoder.h  xflarchive.h
src/: bigendian.cpp  cg_decompress.cpp  cli_main.cpp  encoding.cpp  exe_patch.cpp  gscfile.cpp  gui.cpp  gui_main.cpp  gui_win32.cpp  lim_decoder.cpp  lwg_decoder.cpp  stb_image_impl.cpp  stb_impl.cpp  transfile.cpp  wav_ogg.cpp  wcg_decoder.cpp  xflarchive.cpp
